# yet-another-engine

./: .gitignore  CMakeLists.txt  LICENSE  TODO_NEXT.txt  engine-plan.md  install_sdk.bat  p1-03-logger.txt  p1-04.txt  p2-02.txt
.github/: copilot-instructions.md
cmake/: CompilerOptions.cmake
docs/: Component-Registration.txt  DLL-Hot-Reload.txt  Game-DLL-ABI.txt  Standalone-Game-Template.txt  notes-to-self.txt
editor/: CMakeLists.txt
editor/src/: EditorShared.ixx  EditorTasks.ixx  EditorTests.ixx  HotReloadManager.ixx  main.cpp
engine-core/: CMakeLists.txt
engine-core/include/: GameDLLInterface.h  LoggerMacros.h  ReflectionMacros.h
engine-core/src/: Component.cpp  Component.ixx  ComponentRegistry.cpp  ComponentRegistry.ixx  ComponentStorage.cpp  ComponentStorage.ixx  DataFile.cpp  DataFile.ixx  DllLoader.cpp  DllLoader.ixx  EngineCore.ixx  EngineError.cpp  EngineError.ixx  EngineInstance.cpp  EngineInstance.ixx  FileWatcher.cpp  FileWatcher.ixx  GUID.cpp  GUID.ixx  GameObject.cpp  GameObject.ixx  IComponentStorage.cpp  IComponentStorage.ixx  IScene.ixx  Interfaces.ixx  Logger.cpp  Logger.ixx  Math.cpp  Math.ixx  Reflection.ixx  Scene.cpp  Scene.ixx  SceneImpl.ixx  Serialization.cpp  Serialization.ixx  Transform.cpp  Transform.ixx  Utility.ixx
game-template/: CMakeLists.txt
game-template/src/: GameDLL.cpp  SpinnerComponent.cpp  SpinnerComponent.ixx  SpinnerComponent.reflected.h  main.cpp
